[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipinfo-cli"
version = "1.0.0"
description = "A CLI tool to get IP address information"
authors = [{name = "Hemanth"}]
requires-python = ">=3.8"
dependencies = ["requests"]

[project.scripts]
ipinfo = "ipinfo:main"
